Add logout functionality

--- a/serve/templates/head.html
+++ b/serve/templates/head.html
@@ -3,5 +3,10 @@
   <head>
     <title>Wunschliste</title>
   </head>
-  </body>
+  <body>
+    {{if not .}}
+    <div class="top-bar">
+      <a href="/logout">Logout</a>
+    </div>
+    {{end}}
 {{end}}
