--- a/serve/templates/login.html
+++ b/serve/templates/login.html
@@ -1,5 +1,5 @@
 {{define `login`}}
-{{template `head`}}
+{{template `head` true}}
 <h1>Login</h1>
 {{with .Message}}
 <div class="message">{{.}}</div>
