Add static files serving and bulma.css

--- a/serve/templates/login.html
+++ b/serve/templates/login.html
@@ -9,6 +9,6 @@
   <input type="text" name="name" value="Stefan"><br>
   <label for="password">Password:</label><br>
   <input type="password" name="password" value="blub"><br>
-  <input type="submit" value="Login">
+  <input type="submit" class="button is-primary" value="Login">
 {{template `foot`}}
 {{end}}
