--- a/serve/templates/head.html
+++ b/serve/templates/head.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <title>Wunschliste</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="/static/bulma.min.css">
   </head>
   <body>
     {{if not .}}
