--- a/serve/templates/foot.html
+++ b/serve/templates/foot.html
@@ -1,3 +1,11 @@
-{{define `foot`}}</body>
+{{define `foot`}}
+</div>
+<div class="footer">
+  <div class="content has-text-centered">
+    <strong>Wunschliste</strong> by Stefan Rakel
+  </div>
+</div>
+</section>
+</body>
 </html>
 {{end}}
