--- a/serve/templates/newwish.html
+++ b/serve/templates/newwish.html
@@ -8,7 +8,7 @@
     <div class="field">
       <label class="label" for="name">Beschreibung:</label>
       <div class="control">
-        <input class="input" type="text" name="name" placeholder="Beschreibung" value="{{.Name}}">
+        <input class="input{{if .NameRed}} is-danger{{end}}" type="text" name="name" placeholder="Beschreibung" value="{{.Name}}">
       </div>
     </div>
     <div class="field">
@@ -20,7 +20,7 @@
     <div class="field">
       <label class="label" for="price">Preis:</label>
       <div class="control">
-        <input class="input" type="number" name="price" step="0.01" value=
+        <input class="input{{if .LinkRed}} is-danger{{end}}" type="number" name="price" step="0.01" value=
         {{with .PriceText}}
         "{{.}}"
         {{else}}
