Show edit,delete and reserve links in wishlist if wanted

--- a/serve/templates/newwish.html
+++ b/serve/templates/newwish.html
@@ -32,6 +32,7 @@
     <div class="field">
       <div class="control">
         <input type="submit" class="button is-primary" value="Speichern">
+        <a class="button is-warning" href="/">Abbrechen</a>
       </div>
     </div>
   </form>
