Renaming of newWish to more generic wish/editwish

--- a/serve/templates/editwish.html
+++ b/serve/templates/editwish.html
@@ -1,10 +1,10 @@
-{{define `newWish`}}
+{{define `editWish`}}
 {{template `head`}}
 <section class="section">
   {{with .Message}}
   <div class="notification is-danger is-light">{{.}}</div>
   {{end}}
-  <form action="/newWish" method="POST">
+  <form action="/wish" method="POST">
     <div class="field">
       <label class="label" for="name">Beschreibung:</label>
       <div class="control">
