--- a/serve/templates/wishlist.html
+++ b/serve/templates/wishlist.html
@@ -3,7 +3,7 @@
 {{$canReserve := .CanReserve}}
 <section class="section">
   <div class="containger">
-    <a class="button is-primary" href="newWish">Neuer Wunsch</a>
+    <a class="button is-primary" href="wish">Neuer Wunsch</a>
   </div>
   <table class="table">
     <thead>
