nicer table styling

--- a/serve/templates/wishlist.html
+++ b/serve/templates/wishlist.html
@@ -1,11 +1,11 @@
 {{define `wishlist`}}
 {{$canEdit := .CanEdit}}
 {{$canReserve := .CanReserve}}
-<section class="section">
-  <div class="containger">
+<section class="section container">
+  <div class="container">
     <a class="button is-primary" href="wish">Neuer Wunsch</a>
   </div>
-  <table class="table">
+  <table class="table is-striped is-fullwidth">
     <thead>
       <th>Wunsch</th>
       <th>URL</th>
