We can now display wishlist of other users

--- a/serve/templates/404.html
+++ b/serve/templates/404.html
@@ -1,5 +1,5 @@
 {{define `404`}}
-{{template `head` true}}
+{{template `head`}}
 <h1 class="title">Not found</h1>
 <div class="box">
   Page not found
