Don't show new wish button if not our own wishlist

--- a/serve/templates/wishlist.html
+++ b/serve/templates/wishlist.html
@@ -2,9 +2,11 @@
 {{$canEdit := .CanEdit}}
 {{$canReserve := .CanReserve}}
 <section class="section container">
-  <div class="container">
-    <a class="button is-primary" href="wish">Neuer Wunsch</a>
-  </div>
+  {{if $canEdit}}
+    <div class="container">
+      <a class="button is-primary" href="wish">Neuer Wunsch</a>
+    </div>
+  {{end}}
   <table class="table is-striped is-fullwidth">
     <thead>
       <th>Wunsch</th>
