Cleanup of default values in login

--- a/serve/templates/login.html
+++ b/serve/templates/login.html
@@ -9,13 +9,13 @@
     <div class="field">
       <label class="label" for="name">Name:</label>
       <div class="control">
-        <input class="input" type="text" name="name" value="Stefan" placeholder="Name">
+        <input class="input" type="text" name="name" placeholder="Name">
       </div>
     </div>
     <div class="field">
       <label class="label" for="password">Password:</label>
       <div class="control">
-        <input class="input" type="password" name="password" value="blub"><br>
+        <input class="input" type="password" name="password"><br>
       </div>
     </div>
     <div class="field">
