--- a/serve/templates/login.html
+++ b/serve/templates/login.html
@@ -7,9 +7,9 @@
 <div class="box">
   <form action="/login" method="POST">
     <div class="field">
-      <label class="label" for="name">Name:</label>
+      <label class="label" for="username">Name:</label>
       <div class="control">
-        <input class="input" type="text" name="name" placeholder="Name">
+        <input class="input" type="text" name="username" placeholder="Name">
       </div>
     </div>
     <div class="field">
