--- a/serve/templates/login.html
+++ b/serve/templates/login.html
@@ -26,7 +26,7 @@
   </form>
 </div>
 <div class="box">
-  <a href="/register">Register</a>
+  <a href="/register">Registrieren</a>
 </div>
 {{template `foot`}}
 {{end}}
