--- a/serve/templates/login.html
+++ b/serve/templates/login.html
@@ -25,8 +25,10 @@
     </div>
   </form>
 </div>
+{{if not .RegisterClosed}}
 <div class="box">
   <a href="/register">Registrieren</a>
 </div>
+{{end}}
 {{template `foot`}}
 {{end}}
